--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -48,26 +48,26 @@
             </a>
           </li>
 
-          <li th:replace="::menuItem ('/','home','home page','home','Home')">
+          <li th:replace="::menuItem ('/','home','home page','home','首页')">
             <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
             <span>Home</span>
           </li>
 
-          <li th:replace="::menuItem ('/owners/find','owners','find owners','search','Find owners')">
+          <li th:replace="::menuItem ('/students/search','students','search students','search','搜索')">
             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-            <span>Find owners</span>
+            <span>Search students</span>
           </li>
 
-          <li th:replace="::menuItem ('/vets.html','vets','veterinarians','th-list','Veterinarians')">
-            <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
-            <span>Veterinarians</span>
-          </li>
+<!--          <li th:replace="::menuItem ('/vets.html','vets','veterinarians','th-list','Veterinarians')">-->
+<!--            <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>-->
+<!--            <span>Veterinarians</span>-->
+<!--          </li>-->
 
-          <li
-            th:replace="::menuItem ('/oups','error','trigger a RuntimeException to see how it is handled','warning-sign','Error')">
-            <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
-            <span>Error</span>
-          </li>
+<!--          <li-->
+<!--            th:replace="::menuItem ('/oups','error','trigger a RuntimeException to see how it is handled','warning-sign','Error')">-->
+<!--            <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>-->
+<!--            <span>Error</span>-->
+<!--          </li>-->
 
         </ul>
       </div>
