--- a/src/main/resources/templates/students/createOrUpdateForm.html
+++ b/src/main/resources/templates/students/createOrUpdateForm.html
@@ -10,8 +10,9 @@
         <input th:replace="~{fragments/inputField :: input ('学号', 'id', 'text')}"/>
         <input th:replace="~{fragments/inputField :: input ('姓名', 'name', 'text')}"/>
         <input th:replace="~{fragments/inputField :: input ('出生日期', 'birthDate', 'date')}"/>
-        <!--      <input th:replace="~{fragments/inputField :: input ('City', 'city', 'text')}" />-->
-        <!--      <input th:replace="~{fragments/inputField :: input ('Telephone', 'telephone', 'text')}" />-->
+        <input th:replace="~{fragments/inputField :: input ('性别', 'gender', 'text')}"/>
+        <input th:replace="~{fragments/inputField :: input ('籍贯', 'nativePlace', 'text')}"/>
+        <input th:replace="~{fragments/inputField :: input ('院系', 'department', 'text')}"/>
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
