--- a/src/main/resources/templates/students/studentDetails.html
+++ b/src/main/resources/templates/students/studentDetails.html
@@ -6,76 +6,47 @@
 
 <a th:onclick="goBack()" class="btn btn-default">返回</a>
 
-  <h2>学生详细信息</h2>
+<h2>学生详细信息</h2>
 
 
-  <table class="table table-striped" th:object="${student}">
+<table class="table table-striped" th:object="${student}">
     <tr>
-      <th>学号</th>
-      <td><b th:text="*{id}"></b></td>
+        <th>学号</th>
+        <td><b th:text="*{id}"></b></td>
     </tr>
     <tr>
-      <th>姓名</th>
-      <td th:text="*{name}"></td>
+        <th>姓名</th>
+        <td th:text="*{name}"></td>
 
     </tr>
     <tr>
-      <th>出生日期</th>
-      <td th:text="*{birthDate}" ></td>
+        <th>出生日期</th>
+        <td th:text="*{birthDate}"></td>
     </tr>
-  </table>
+    <tr>
+        <th>性别</th>
+        <td th:text="*{gender}"></td>
+    </tr>
+    <tr>
+        <th>籍贯</th>
+        <td th:text="*{nativePlace}"></td>
+    </tr>
+    <tr>
+        <th>院系</th>
+        <td th:text="*{department}"></td>
+    </tr>
+</table>
 
-  <a th:href="@{{id}/edit(id=${student.id})}" class="btn btn-default">编辑信息</a>
-  
-    <br />
-    <br />
-    <br />
-<!--    <h2>Pets and Visits</h2>-->
-<!--  -->
-<!--    <table class="table table-striped">-->
-<!--  -->
-<!--      <tr th:each="pet : ${owner.pets}">-->
-<!--        <td valign="top">-->
-<!--          <dl class="dl-horizontal">-->
-<!--            <dt>Name</dt>-->
-<!--            <dd th:text="${pet.name}" /></dd>-->
-<!--            <dt>Birth Date</dt>-->
-<!--            <dd-->
-<!--              th:text="${#temporals.format(pet.birthDate, 'yyyy-MM-dd')}" /></dd>-->
-<!--            <dt>Type</dt>-->
-<!--            <dd th:text="${pet.type}" /></dd>-->
-<!--          </dl>-->
-<!--        </td>-->
-<!--        <td valign="top">-->
-<!--          <table class="table-condensed">-->
-<!--            <thead>-->
-<!--              <tr>-->
-<!--                <th>Visit Date</th>-->
-<!--                <th>Description</th>-->
-<!--              </tr>-->
-<!--            </thead>-->
-<!--            <tr th:each="visit : ${pet.visits}">-->
-<!--              <td th:text="${#temporals.format(visit.date, 'yyyy-MM-dd')}"></td>-->
-<!--              <td th:text="${visit?.description}"></td>-->
-<!--            </tr>-->
-<!--            <tr>-->
-<!--              <td><a-->
-<!--                th:href="@{{ownerId}/pets/{petId}/edit(ownerId=${owner.id},petId=${pet.id})}">Edit-->
-<!--                  Pet</a></td>-->
-<!--              <td><a-->
-<!--                th:href="@{{ownerId}/pets/{petId}/visits/new(ownerId=${owner.id},petId=${pet.id})}">Add-->
-<!--                  Visit</a></td>-->
-<!--            </tr>-->
-<!--          </table>-->
-<!--        </td>-->
-<!--      </tr>-->
-<!--  -->
-<!--    </table>-->
-  <script>
-    function goBack(){
-      window.history.back();
+<a th:href="@{{id}/edit(id=${student.id})}" class="btn btn-default">编辑信息</a>
+
+<br/>
+<br/>
+<br/>
+<script>
+    function goBack() {
+        window.history.back();
     }
-  </script>
-  </body>
+</script>
+</body>
 
 </html>
