--- a/src/main/resources/templates/students/studentsList.html
+++ b/src/main/resources/templates/students/studentsList.html
@@ -6,16 +6,6 @@
 <h1 th:text="${title}">学生列表</h1>
 <a th:text="'添加新学生'" th:href="@{/students/new}"></a>
 <br>
-<!--<div class="form-group">-->
-<!--    <div class="control-group" id="studentNameGroup">-->
-<!--        <div class="col-sm-2">-->
-<!--            <h1>学生列表</h1>-->
-<!--        </div>-->
-<!--        <div class="col-sm-offset-8 col-sm-2">-->
-<!--            <a th:text="'添加学生'" th:href="@{/students/new}"></a>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
 
 
 <table id="students" class="table table-striped">
@@ -24,6 +14,9 @@
         <th style="width: 130px;">学号</th>
         <th style="width: 70px;">姓名</th>
         <th style="width: 130px;">出生日期</th>
+        <th style="width: 70px;">性别</th>
+        <th style="width: 200px;">籍贯</th>
+        <th style="width: 300px;">院系</th>
         <th style="width: 70px;"></th>
         <th></th>
     </tr>
@@ -36,6 +29,9 @@
         <!--        <td th:text="${student.studentId}" />-->
         <td th:text="${student.name}"></td>
         <td th:text="${student.birthDate}"></td>
+        <td th:text="${student.gender}"></td>
+        <td th:text="${student.nativePlace}"></td>
+        <td th:text="${student.department}"></td>
         <td>
             <a th:href="@{/students/__${student.id}__/edit}" >
                 <button th:text="'编辑'"></button>
