--- a/src/main/resources/templates/students/createOrUpdateForm.html
+++ b/src/main/resources/templates/students/createOrUpdateForm.html
@@ -13,7 +13,7 @@
 <!--        <input th:replace="~{fragments/selectField :: select ('性别', 'gender', ${genders})}" />-->
         <input th:replace="~{fragments/inputField :: input ('性别', 'gender', 'text')}"/>
 <!--        <input th:replace="~{fragments/selectField :: select ('籍贯', 'nativePlace', ${native_places})}" />-->
-        <input th:replace="~{fragments/inputField :: input ('籍贯', 'nativePlace', 'text')}"/>
+        <input th:replace="~{fragments/inputField :: input ('电话', 'phone', 'text')}"/>
 <!--        <input th:replace="~{fragments/selectField :: select ('院系', 'department', ${departments})}" />-->
         <input th:replace="~{fragments/inputField :: input ('院系', 'department', 'text')}"/>
     </div>
