--- a/src/main/resources/templates/students/studentDetails.html
+++ b/src/main/resources/templates/students/studentDetails.html
@@ -28,8 +28,8 @@
         <td th:text="*{gender}"></td>
     </tr>
     <tr>
-        <th>籍贯</th>
-        <td th:text="*{nativePlace}"></td>
+        <th>电话</th>
+        <td th:text="*{phone}"></td>
     </tr>
     <tr>
         <th>院系</th>
