--- a/src/main/resources/templates/students/findStudents.html
+++ b/src/main/resources/templates/students/findStudents.html
@@ -10,7 +10,7 @@
       <div class="control-group" id="studentNameGroup">
 <!--        <label class=" control-label">关键词 </label>-->
         <div class="col-sm-10">
-          <input class="form-control" th:field="*{name}" size="30" maxlength="80" placeholder="请输入姓名、学号、院系或籍贯"/> <span class="help-inline">
+          <input class="form-control" th:field="*{name}" size="30" maxlength="80" placeholder="请输入姓名、学号、院系或电话"/> <span class="help-inline">
             <div th:if="${#fields.hasAnyErrors()}">
               <p th:each="err : ${#fields.allErrors()}" th:text="${err}">Error</p>
             </div></span>
