--- a/src/main/resources/templates/students/studentsList.html
+++ b/src/main/resources/templates/students/studentsList.html
@@ -15,7 +15,7 @@
         <th style="width: 70px;">姓名</th>
         <th style="width: 130px;">出生日期</th>
         <th style="width: 70px;">性别</th>
-        <th style="width: 200px;">籍贯</th>
+        <th style="width: 200px;">电话</th>
         <th style="width: 300px;">院系</th>
         <th style="width: 70px;"></th>
         <th></th>
@@ -30,7 +30,7 @@
         <td th:text="${student.name}"></td>
         <td th:text="${student.birthDate}"></td>
         <td th:text="${student.gender}"></td>
-        <td th:text="${student.nativePlace}"></td>
+        <td th:text="${student.phone}"></td>
         <td th:text="${student.department}"></td>
         <td>
             <a th:href="@{/students/__${student.id}__/edit}" >
